objects/Zendesk__Zendesk_Domain__c.object
<CustomObject>
    <description>To store the credentials of multiple Zendesk domains</description>
    <fields>
        <fullName>Zendesk__DomainURL__c</fullName>
        <description>URL of the Zendesk Domain</description>
        <label>Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zendesk__Integration_Access_Token__c</fullName>
        <label>Integration Access Token</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Zendesk__Is_Using_OAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Using OAuth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Main_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Zendesk__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Domain</label>
    <nameField>
        <label>Zendesk Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>